Search filter in favorites modal

--- a/src/app/pages/favorites-modal/favorite-item/favorite-item.component.sass
+++ b/src/app/pages/favorites-modal/favorite-item/favorite-item.component.sass
@@ -1,6 +1,7 @@
 \:host
   display: flex
   height: 70px
+  // width: 600px
   flex-direction: column
   border: 1px solid var(--bg-secondary)
   color: black
@@ -12,6 +13,7 @@
   margin-bottom: 10px
   min-height: 0
   min-width: 0
+  max-width: 600px
 
 .sections
   max-height: 70px
@@ -33,6 +35,7 @@
   grid-area: title
   font-weight: bold
   padding-left: 10px
+  text-align: left
 
 .buttons
   grid-area: buttons
