--- a/src/styles.sass
+++ b/src/styles.sass
@@ -30,6 +30,7 @@ html, body
 
 h1, h2
   margin-top: 0
+  margin-bottom: 0
 
 main
   margin-left: 5rem
@@ -57,7 +58,14 @@ mat-form-field
   main
     margin-left: 0
     margin-bottom: 5rem
-    padding: 0.5rem
+    padding: 1.2rem
+
+  .mat-dialog-container
+    padding: 8px !important
+    overflow: hidden !important
+
+  .mat-dialog-content
+    max-height: 100% !important
 
   mat-form-field
     width: 70vw
