--- a/src/app/pages/favorites-modal/favorites-modal.component.sass
+++ b/src/app/pages/favorites-modal/favorites-modal.component.sass
@@ -3,30 +3,64 @@
   display: flex
   flex-direction: column
 
+.header
+  margin: 0
+  display: grid
+  grid-template-columns: 50% 50%
+  &-buttons
+    text-align: right
+
+.close-icon
+  cursor: pointer
+  color: black
+  background-color: var(--bg-secondary)
+  border-radius: 50%
+  &:hover
+    color: red
+
 .filters
   display: grid
-  margin-bottom: 50px
   overflow: hidden
   justify-content: center
-  transform: scale(0.8)
 
 .favorites-list
   display: grid
-  padding-left: 50px
-  padding-right: 50px
   text-align: -webkit-center
 
-.spacer
-  flex-grow: 1
+.footer
+  height: calc(100% - 96px)
+  max-height: unset
+
+.text-empty
+  margin-top: 10px
+  text-align: center
 
 // Responsiveness
 // Large screens
 @media(min-width: 800px)
-.filters
-  grid-template-areas: 'search pagination'
+  .header
+    margin-bottom: 20px
 
+  .close-icon
+    font-size: 2rem
+
+  .filters
+    grid-template-areas: 'search pagination'
+    grid-template-columns: 50% 50%
+    margin-bottom: 50px
+
+  .favorites-list
+    padding-left: 50px
+    padding-right: 50px
 
 // Small screens
 @media(max-width: 800px)
-.filters
-  grid-template-areas: 'search' 'pagination'
+  .close-icon
+    font-size: 7vw
+
+  .filters
+    grid-template-areas: 'search' 'pagination'
+    grid-template-columns: 100%
+    margin-bottom: 10px
+    transform: scale(0.85)
+
