Moved normalized search filter to shared js function

--- a/src/app/pages/favorites-modal/favorites-modal.component.html
+++ b/src/app/pages/favorites-modal/favorites-modal.component.html
@@ -19,6 +19,6 @@
     </div>
   </ng-container>
   <ng-template #noFavorites>
-    <div class="text-empty">Tu lista de favoritos está vacía! 😫</div>
+    <div class="text-empty">Tu lista de favoritos está vacía! 😿</div>
   </ng-template>
 </div>
