Fixed testing imports

--- a/src/app/pages/item-manager/item/item.component.html
+++ b/src/app/pages/item-manager/item/item.component.html
@@ -1,4 +1,4 @@
-<div class="sections">
+<div *ngIf="item" class="sections">
   <!-- Photo -->
   <div class="photo">
     <img class="photo-img" src="{{ item.image }}" alt="{{ item.title }}" />
