--- a/src/app/pages/favorites-modal/favorite-item/favorite-item.component.html
+++ b/src/app/pages/favorites-modal/favorite-item/favorite-item.component.html
@@ -1,4 +1,4 @@
-<div class="sections">
+<div *ngIf="item" class="sections">
   <div class="photo">
     <img class="photo-img" src="{{ item.image }}" alt="{{ item.title }}" />
   </div>
