Implemented more unit tets and e2e tests, also waiting message

--- a/src/app/pages/item-manager/item-list/item-list.component.sass
+++ b/src/app/pages/item-manager/item-list/item-list.component.sass
@@ -1,6 +1,10 @@
 .list
   display: grid
 
+.no-items-found
+  text-align: center
+  margin-top: 10px
+
 // Responsiveness
 // Large screens
 @media(min-width: 800px)
