--- a/src/app/pages/item-manager/filters/filters.component.html
+++ b/src/app/pages/item-manager/filters/filters.component.html
@@ -2,6 +2,7 @@
 <searcher class="search" (searched)="onSearch($event)"></searcher>
 
 <!-- Sort By -->
+<!-- TODO: Move sorter to a shareable component -->
 <div class="sort-filter">
   <span>
     <i class="material-icons">sort_by_alpha</i>
