--- a/src/styles.sass
+++ b/src/styles.sass
@@ -46,6 +46,11 @@ select:focus
 mat-form-field
   margin-left: 20px
 
+// For UX purposes
+.loading
+  opacity: 0.5
+  pointer-events: none
+
 // Responsiveness
 // Large screens
 @media(min-width: 800px)
