--- a/src/app/pages/item-manager/item-list/item-list.component.html
+++ b/src/app/pages/item-manager/item-list/item-list.component.html
@@ -30,6 +30,7 @@
 </ng-container>
 
 <!-- TODO: Implement ghosted items list instead of displaying a message -->
+<!-- TODO: Show error message to user if request failed -->
 <ng-template #wait>
   <div class="no-items-found">
     Buscando los objetos... Espera un momento, por favor! 🙄
