--- a/src/app/pages/favorites-modal/favorites-modal.component.sass
+++ b/src/app/pages/favorites-modal/favorites-modal.component.sass
@@ -26,6 +26,8 @@
 .favorites-list
   display: grid
   text-align: -webkit-center
+  &-quantity-number
+    font-weight: bold
 
 .footer
   height: calc(100% - 96px)
