--- a/src/app/pages/item-manager/item-list/item-list.component.html
+++ b/src/app/pages/item-manager/item-list/item-list.component.html
@@ -33,6 +33,6 @@
 <!-- TODO: Show error message to user if request failed -->
 <ng-template #wait>
   <div class="no-items-found">
-    Buscando los objetos... Espera un momento, por favor! 🙄
+    Buscando los objetos... Espera un momento, por favor! ⏳😸
   </div>
 </ng-template>
