Fixed typo in favs modal

--- a/src/app/pages/favorites-modal/favorites-modal.component.html
+++ b/src/app/pages/favorites-modal/favorites-modal.component.html
@@ -23,7 +23,7 @@
         <span class="favorites-list-quantity-number">{{
           favoritesQuantity
         }}</span>
-        objetos favoritos 😻</span
+        objeto<span *ngIf="favoritesQuantity > 1">s</span> en favoritos😻</span
       >
       <favorite-item
         *ngFor="let favorite of filteredFavorites"
