Favorites list centered with firefox compatibility

--- a/src/app/pages/favorites-modal/favorites-modal.component.sass
+++ b/src/app/pages/favorites-modal/favorites-modal.component.sass
@@ -25,7 +25,8 @@
 
 .favorites-list
   display: grid
-  text-align: -webkit-center
+  text-align: center
+  justify-content: center
   &-quantity-number
     font-weight: bold
 
