--- a/src/app/pages/favorites-modal/favorites-modal.component.sass
+++ b/src/app/pages/favorites-modal/favorites-modal.component.sass
@@ -25,8 +25,7 @@
 
 .favorites-list
   display: grid
-  text-align: center
-  justify-content: center
+  text-align: -webkit-center
   &-quantity-number
     font-weight: bold
 
